# ffl-mcp

./: MCP.py  README.md  pyproject.toml
install/: install.py
src/: MCP.py  __init__.py
