[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ffl-mcp"
version = "0.0.1"
description = "Local-only MCP server for ffl/ffl.com (APE)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "fastmcp>=2,<3"
]

[project.scripts]
ffl-mcp = "src.MCP:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
